# lk21-fixed

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
lk21/: __init__.py
lk21/extractors/: anibatch.py  anikyojin.py  animeindo.py  bypasser.py  drivenime.py  kdramaindo.py  otakudesu.py  samehadaku.py
