[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lk21"
author = "Yoga Pranata"
license = "MIT"
author-email = "zyxdevs@otakufanshare.eu.org"
home-page = "https://www.otakufanshare.eu.org"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["questionary", "bs4", "requests", "requests-cache", "colorama"]
requires-python = ">=3.9"

[tool.flit.scripts]
lk21 = "lk21.cli:main"
